<resources>
    <string name="app_name">weatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_details">Weather Details</string>
    <string name="feel_like">Feels Like</string>
    <string name="nne_wind">NNE Wind</string>
    <string name="humidity">Humidity</string>
    <string name="uv">UV</string>
    <string name="visibility">Visibility</string>
    <string name="air_pressure">Air pressure</string>
    <string name="weather_forecast">15 Day weather forecast</string>
    <string name="sea">Sea level</string>
    <string name="desc">Description</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="alert">Notification</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="search_here">Search here</string>
    <string name="map">Map</string>
    <string name="save_Location">Do you want to save Location ?</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="lan">Language</string>
    <string name="cel">Celsius</string>
    <string name="kel">Kelvin</string>
    <string name="far">Fahrenheit</string>
    <string name="temp">Temperature</string>
    <string name="loc">Location</string>
    <string name="gps">GPS</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="meter">Meter / Sec</string>
    <string name="mile">Mile / Hour</string>
    <string name="setting">Setting</string>
    <string name="today">Today</string>
    <string name="cancel_action_label">Cancel</string>
    <string name="welcome_msg">Welcome \n      to Sky Watch</string>
    <string name="savedl">Saved Countries</string>
    <string name="noData">No Data Found</string>
    <string name="alertKeyWord">Alert</string>
    <string name="noAlert">No Alerts Found</string>


</resources>